fix(java): resolve ambiguous List import, missing ScheduledExecutorService, add serialVersionUID, and support multi-JDK compatibility